--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   <!-- 
+    - Tags meta utama
+  -->
+  <title>Waroeng Cak Dono</title>
+  <meta name="title" content="Waroeng Cak Dono">
+  <meta name="description" content="Ini adalah Website Waroeng Cak Dono">
+
+   <!-- 
+    - favicon
+  -->
+  <link rel="shortcut icon" href="utensils-solid.svg" type="image/svg+xml">
+
+  
