menambahkan fitur walpaper

--- a/Index.html
+++ b/Index.html
@@ -18,4 +18,25 @@
   -->
   <link rel="shortcut icon" href="utensils-solid.svg" type="image/svg+xml">
 
-  
+   <!-- 
+    - google font link
+  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+
+  <!-- 
+    - Nyambungin ke Css
+  -->
+  <link rel="stylesheet" href="Waroeng.css">
+
+   <!-- 
+    - Walpaper baground
+  -->
+  <link rel="preload" as="image" href="tempat makan.jpg">
+  <link rel="preload" as="image" href="foto makan.jpg">
+  <link rel="preload" as="image" href="Foto Ikan Bakar.jpg">
+
+</head>
+
+<body id="top">
