menambhakan fitur animasi loading

--- a/Index.html
+++ b/Index.html
@@ -40,3 +40,12 @@
 </head>
 
 <body id="top">
+
+ <!-- 
+    - #PRELOADER
+  -->
+
+  <div class="preload" data-preaload>
+    <div class="circle"></div>
+    <p class="text">Waroeng Cak Dono</p>
+  </div>
