menambhkan fitur bagian atas

--- a/Index.html
+++ b/Index.html
@@ -49,3 +49,55 @@
     <div class="circle"></div>
     <p class="text">Waroeng Cak Dono</p>
   </div>
+
+   <!-- 
+    - #BAGIAN ATAS
+  -->
+
+  <div class="topbar">
+    <div class="container">
+
+      <address class="topbar-item">
+        <div class="icon">
+          <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
+        </div>
+
+        <span class="span">
+          Waroeng Cak Dono, Kemayoran Bangkalan, Bangkalan 2000, IND
+        </span>
+      </address>
+
+      <div class="separator"></div>
+
+      <div class="topbar-item item-2">
+        <div class="icon">
+          <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+        </div>
+
+        <span class="span">Setiap hari: pukul 16.00 sore hingga 12.00 malam</span>
+      </div>
+
+      <a href="+62 857 8478 6339" class="topbar-item link">
+        <div class="icon">
+          <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
+        </div>
+
+        <span class="span">+62 857 8478 6339</span>
+      </a>
+
+      <div class="separator"></div>
+
+      <a href="ya166260@gmail.com" class="topbar-item link">
+        <div class="icon">
+          <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
+        </div>
+
+        <span class="span">ya166260@gmail.com</span>
+      </a>
+
+    </div>
+  </div>
+
+
+
+
