--- a/Index.html
+++ b/Index.html
@@ -190,6 +190,107 @@
     </div>
   </header>
 
-  
+
   <main>
     <article>
+
+        <!-- 
+        - #TAMPILAN AWAL BAGROUND
+      -->
+
+      <section class="hero text-center" aria-label="home" id="home">
+
+        <ul class="hero-slider" data-hero-slider>
+
+          <li class="slider-item active" data-hero-slider-item>
+
+            <div class="slider-bg">
+              <img src="tempat makan.jpg" width="1880" height="950" alt="" class="img-cover">
+            </div>
+
+            <p class="label-2 section-subtitle slider-reveal">Indahnya Kebersamaan</p>
+
+            <h1 class="display-1 hero-title slider-reveal">
+              Untuk <br>
+              Pecinta Makanan Lezat
+            </h1>
+
+            <p class="body-2 hero-text slider-reveal">
+                Datang bersama keluarga & rasakan nikmatnya makanan yang menggugah selera
+            </p>
+
+            <a href="#" class="btn btn-primary slider-reveal">
+              <span class="text text-1">Lihat Menu Kami</span>
+
+              <span class="text text-2" aria-hidden="true">Lihat Menu Kami</span>
+            </a>
+
+          </li>
+
+          <li class="slider-item" data-hero-slider-item>
+
+            <div class="slider-bg">
+              <img src="foto makan.jpg" width="1880" height="950" alt="" class="img-cover">
+            </div>
+
+            <p class="label-2 section-subtitle slider-reveal">pengalaman yang menyenangkan</p>
+
+            <h1 class="display-1 hero-title slider-reveal">
+                Rasa Terinspirasi oleh <br>
+                Musim
+            </h1>
+
+            <p class="body-2 hero-text slider-reveal">
+                Datang bersama keluarga & rasakan nikmatnya makanan yang menggugah selera
+            </p>
+
+            <a href="#" class="btn btn-primary slider-reveal">
+              <span class="text text-1">Lihat Menu Kami</span>
+
+              <span class="text text-2" aria-hidden="true">Lihat Menu Kami</span>
+            </a>
+
+          </li>
+
+          <li class="slider-item" data-hero-slider-item>
+
+            <div class="slider-bg">
+              <img src="Foto Ikan Bakar.jpg" width="1880" height="950" alt="" class="img-cover">
+            </div>
+
+            <p class="label-2 section-subtitle slider-reveal">luar biasa & lezat</p>
+
+            <h1 class="display-1 hero-title slider-reveal">
+                Dimana setiap rasa <br>
+                menceritakan sebuah cerita
+            </h1>
+
+            <p class="body-2 hero-text slider-reveal">
+                Datang bersama keluarga & rasakan nikmatnya makanan yang menggugah selera
+            </p>
+
+            <a href="#" class="btn btn-primary slider-reveal">
+              <span class="text text-1">Lihat Menu Kami</span>
+
+              <span class="text text-2" aria-hidden="true">Lihat Menu Kami</span>
+            </a>
+
+          </li>
+
+        </ul>
+
+        <button class="slider-btn prev" aria-label="slide to previous" data-prev-btn>
+          <ion-icon name="chevron-back"></ion-icon>
+        </button>
+
+        <button class="slider-btn next" aria-label="slide to next" data-next-btn>
+          <ion-icon name="chevron-forward"></ion-icon>
+        </button>
+
+        <a href="#" class="hero-btn has-after">
+          <img src="chair-solid.svg" width="48" height="48" alt="booking icon">
+
+          <span class="label-2 text-center span">Memesan Kursi</span>
+        </a>
+
+      </section>
