menambahkan fitur makanan dengan rating tertnggi

--- a/Index.html
+++ b/Index.html
@@ -294,3 +294,99 @@
         </a>
 
       </section>
+
+       <!-- 
+        - #MAKANAN DENGAN RATING TERTINGGI
+      -->
+
+      <section class="section service bg-black-10 text-center" aria-label="service">
+        <div class="container">
+
+          <p class="section-subtitle label-2">Rasa Untuk Royality</p>
+
+          <h2 class="headline-1 section-title">Kami Menawarkan Kedudukan Tertinggi</h2>
+
+          <p class="section-text">
+            Makanan yang ada di foto ini adalah makanan dengan rating tertinggi di tempat makan kami.
+          </p>
+
+          <ul class="grid-list">
+
+            <li>
+              <div class="service-card">
+
+                <a href="#" class="has-before hover:shine">
+                  <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
+                    <img src="Foto Ayam Bakar.jpg" width="285" height="336" loading="lazy" alt="Sarapan"
+                      class="img-cover">
+                  </figure>
+                </a>
+
+                <div class="card-content">
+
+                  <h3 class="title-4 card-title">
+                    <a href="#">Sarapan</a>
+                  </h3>
+
+                  <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card">
+
+                <a href="#" class="has-before hover:shine">
+                  <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
+                    <img src="Foto Ikan Bakar 2.jpg" width="285" height="336" loading="lazy" alt="Makanan Pembuka"
+                      class="img-cover">
+                  </figure>
+                </a>
+
+                <div class="card-content">
+
+                  <h3 class="title-4 card-title">
+                    <a href="#">Makanan Pembuka</a>
+                  </h3>
+
+                  <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="service-card">
+
+                <a href="#" class="has-before hover:shine">
+                  <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
+                    <img src="Foto es teh.jpg" width="285" height="336" loading="lazy" alt="Minuman"
+                      class="img-cover">
+                  </figure>
+                </a>
+
+                <div class="card-content">
+
+                  <h3 class="title-4 card-title">
+                    <a href="#">Minuman</a>
+                  </h3>
+
+                  <a href="#" class="btn-text hover-underline label-2">Lihat Menu</a>
+
+                </div>
+
+              </div>
+            </li>
+
+          </ul>
+
+          <img src="shape-2.png" width="246" height="412" loading="lazy" alt="shape"
+            class="shape shape-1 move-anim">
+          <img src="shape-1.png" width="343" height="345" loading="lazy" alt="shape"
+            class="shape shape-2 move-anim">
+
+        </div>
+      </section>
