menambahkan fitur cerita

--- a/Index.html
+++ b/Index.html
@@ -390,3 +390,53 @@
 
         </div>
       </section>
+
+      <!-- 
+        - #CERITA
+      -->
+
+      <section class="section about text-center" aria-labelledby="about-label" id="about">
+        <div class="container">
+
+          <div class="about-content">
+
+            <p class="label-2 section-subtitle" id="about-label">Cerita kita</p>
+
+            <h2 class="headline-1 section-title">Setiap Rasa Menceritakan Sebuah Kisah</h2>
+
+            <p class="section-text">
+              Makanan terasa lebih enak saat kamu makan bersama.
+            </p>
+
+            <div class="contact-label">Pesan Melalui Panggilan</div>
+
+            <a href="+62 857 8478 6339" class="body-1 contact-number hover-underline">+62 857 8478 6339</a>
+
+            <a href="#" class="btn btn-primary">
+              <span class="text text-1">Baca selengkapnya</span>
+
+              <span class="text text-2" aria-hidden="true">Baca selengkapnya</span>
+            </a>
+
+          </div>
+
+          <figure class="about-banner">
+
+            <img src="foto makan bersama.jpg" width="570" height="570" loading="lazy" alt="about banner"
+              class="w-100" data-parallax-item data-parallax-speed="1">
+
+            <div class="abs-img abs-img-1 has-before" data-parallax-item data-parallax-speed="1.75">
+              <img src="fot makan bersama 2.jpg" width="285" height="285" loading="lazy" alt=""
+                class="w-100">
+            </div>
+
+            <div class="abs-img abs-img-2 has-before">
+              <img src="./assets/images/badge-2.png" width="133" height="134" loading="lazy" alt="">
+            </div>
+
+          </figure>
+
+          <img src="shape-3.png" width="197" height="194" loading="lazy" alt="" class="shape">
+
+        </div>
+      </section>
