--- a/Index.html
+++ b/Index.html
@@ -719,3 +719,114 @@ Yuk cobain ayam bakar dari @ayambakarcakdono bumbu ayam bakarnya tuh melimpah se
 
         </div>
       </section>
+
+       <!-- 
+        - #TABEL PEMESANAN
+      -->
+
+      <section class="reservation">
+        <div class="container">
+
+          <div class="form reservation-form bg-black-10">
+
+            <form action="" class="form-left">
+
+              <h2 class="headline-1 text-center">Pemesanan Online</h2>
+
+              <p class="form-text text-center">
+                Permintaan booking <a href="tel:+88123123456" class="link">+62 857 8478 6339</a>
+                atau isi formulir pemesanan
+              </p>
+
+              <div class="input-wrapper">
+                <input type="text" name="name" placeholder="Nama kamu" autocomplete="off" class="input-field">
+
+                <input type="tel" name="phone" placeholder="Nomor Telepon" autocomplete="off" class="input-field">
+              </div>
+
+              <div class="input-wrapper">
+
+                <div class="icon-wrapper">
+                  <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+
+                  <select name="person" class="input-field">
+                    <option value="1-person">1 Orang</option>
+                    <option value="2-person">2 Orang</option>
+                    <option value="3-person">3 Orang</option>
+                    <option value="4-person">4 Orang</option>
+                    <option value="5-person">5 Orang</option>
+                    <option value="6-person">6 Orang</option>
+                    <option value="7-person">7 Orang</option>
+                  </select>
+
+                  <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                </div>
+
+                <div class="icon-wrapper">
+                  <ion-icon name="calendar-clear-outline" aria-hidden="true"></ion-icon>
+
+                  <input type="date" name="reservation-date" class="input-field">
+
+                  <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                </div>
+
+                <div class="icon-wrapper">
+                  <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+
+                  <select name="person" class="input-field">
+                    <option value="08:00am">16 : 00 sore</option>
+                    <option value="09:00am">17 : 00 sore</option>
+                    <option value="010:00am">18 : 00 sore</option>
+                    <option value="011:00am">19 : 00 malam</option>
+                    <option value="012:00am">20 : 00 malam</option>
+                    <option value="01:00pm">21 : 00 malam</option>
+                    <option value="02:00pm">22 : 00 malam</option>
+                    <option value="03:00pm">23 : 00 malam</option>
+                    <option value="04:00pm">00 : 00 malam</option>
+                  </select>
+
+                  <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
+                </div>
+
+              </div>
+
+              <textarea name="message" placeholder="Pesan" autocomplete="off" class="input-field"></textarea>
+
+              <button type="submit" class="btn btn-secondary">
+                <span class="text text-1">Memesan Meja</span>
+
+                <span class="text text-2" aria-hidden="true">Memesan Meja</span>
+              </button>
+
+            </form>
+
+            <div class="form-right text-center" style="background-image: url('./assets/images/form-pattern.png')">
+
+              <h2 class="headline-1 text-center">Hubungi Kami</h2>
+
+              <p class="contact-label">Permintaan Boking</p>
+
+              <a href="tel:+88123123456" class="body-1 contact-number hover-underline">+62 857 8478 6339</a>
+
+              <div class="separator"></div>
+
+              <p class="contact-label">Lokasi</p>
+
+              <address class="body-4">
+                Waroeng Cak Dono, Kemayoran Bangkalan, <br>
+                Bangkalan 2000, IND
+              </address>
+
+              <p class="contact-label">Waktu Makan Malam</p>
+
+              <p class="body-4">
+                Senin sampai Minggu<br>
+                16.00 Sore - 12.00 Malam
+              </p>
+
+            </div>
+
+          </div>
+
+        </div>
+      </section>
