menambahkan fitur keterangan sosial media

--- a/Index.html
+++ b/Index.html
@@ -1000,3 +1000,116 @@ Yuk cobain ayam bakar dari @ayambakarcakdono bumbu ayam bakarnya tuh melimpah se
 
     </article>
   </main>
+
+    <!-- 
+    - #KETERANGAN SOSIAL MEDIA
+  -->
+
+  <footer class="footer section has-bg-image text-center"
+    style="background-image: url('./assets/images/footer-bg.jpg')">
+    <div class="container">
+
+      <div class="footer-top grid-list">
+
+        <div class="footer-brand has-before has-after">
+
+          <a href="#" class="logo">
+            <img src="favicon.svg" width="160" height="50" loading="lazy" alt="Waroeng Cak Dono">
+          </a>
+
+          <address class="body-4">
+            Waroeng Cak Dono, Kemayoran Bangkalan, Bangkalan 2000, IND
+          </address>
+
+          <a href="ya166260@gmail.com" class="body-4 contact-link">ya166260@gmail.com</a>
+
+          <a href="tel:+88123123456" class="body-4 contact-link">Permintaan Boking : +62 857 8478 6339</a>
+
+          <p class="body-4">
+            Buka : 16:00 Sore - 12:00 Malam
+          </p>
+
+          <div class="wrapper">
+            <div class="separator"></div>
+            <div class="separator"></div>
+            <div class="separator"></div>
+          </div>
+
+          <p class="title-1">Dapatkan Berita & Penawaran</p>
+
+          <p class="label-1">
+            Berlangganan kami & Dapatkan <span class="span">20% Off.</span>
+          </p>
+
+          <form action="" class="input-wrapper">
+            <div class="icon-wrapper">
+              <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
+
+              <input type="email" name="email_address" placeholder="Email Kamu" autocomplete="off" class="input-field">
+            </div>
+
+            <button type="submit" class="btn btn-secondary">
+              <span class="text text-1">Langganan</span>
+
+              <span class="text text-2" aria-hidden="true">Langganan</span>
+            </button>
+          </form>
+
+        </div>
+
+        <ul class="footer-list">
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Home</a>
+          </li>
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Menu</a>
+          </li>
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Tentang Kami</a>
+          </li>
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Kontak</a>
+          </li>
+
+        </ul>
+
+        <ul class="footer-list">
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Facebook</a>
+          </li>
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Instagram</a>
+          </li>
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Twitter</a>
+          </li>
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Youtube</a>
+          </li>
+
+          <li>
+            <a href="#" class="label-2 footer-link hover-underline">Google Map</a>
+          </li>
+
+        </ul>
+
+      </div>
+
+      <div class="footer-bottom">
+
+        <p class="copyright">
+          &copy; 2023 Waroeng Cak Dono. All Rights Reserved | Di buat oleh Andhika Ram Gandhi J.<a href="https://github.com/codewithsadee" 
+        </p>
+
+      </div>
+
+    </div>
+  </footer>
