menambahkan fitur kembali ke atas

--- a/Index.html
+++ b/Index.html
@@ -1113,3 +1113,11 @@ Yuk cobain ayam bakar dari @ayambakarcakdono bumbu ayam bakarnya tuh melimpah se
 
     </div>
   </footer>
+
+  <!-- 
+    - #KEMBALI KE ATAS
+  -->
+
+  <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
+    <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
+  </a>
