menambahkan fitur sambungin ke js

--- a/Index.html
+++ b/Index.html
@@ -1121,3 +1121,8 @@ Yuk cobain ayam bakar dari @ayambakarcakdono bumbu ayam bakarnya tuh melimpah se
   <a href="#top" class="back-top-btn active" aria-label="back to top" data-back-top-btn>
     <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
   </a>
+
+  <!-- 
+    - SAMBUNGIN KE JS
+  -->
+  <script src="Waroeng.js"></script>
