menambahkan fitur animasi masuk loading

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
   <!-- 
     - Nyambungin ke Css
   -->
-  <link rel="stylesheet" href="Waroeng.css">
+  <link rel="stylesheet" href="style.css">
 
    <!-- 
     - Walpaper baground
@@ -1125,7 +1125,7 @@ Yuk cobain ayam bakar dari @ayambakarcakdono bumbu ayam bakarnya tuh melimpah se
   <!-- 
     - SAMBUNGIN KE JS
   -->
-  <script src="Waroeng.js"></script>
+  <script src="script.js"></script>
 
    <!-- 
     - ionicon link
